add theoretical analysi chepater

--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -33,7 +33,7 @@ write something
 
 \input{chapters/Introduction}
 \input{chapters/Mathematical}
-\input{chapters/Problem}
+\input{chapters/Theoretical Analysis}
 \input{chapters/Results}
 \input{chapters/Simulation}
 \input{chapters/Conclusion}
