--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -11,11 +11,7 @@
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{Conference Paper Title*\\
-{\footnotesize \textsuperscript{*}Note: Sub-titles are not captured in Xplore and
-should not be used}
-\thanks{Identify applicable funding agency here. If none, delete this.}
-}
+\title{Conference Paper Title\\}
 
 \author{\IEEEauthorblockN{Alessio Mina}
 \IEEEauthorblockA{\textit{ETH Zurich, MSc Mech Eng}}
@@ -29,7 +25,7 @@ should not be used}
 
 \maketitle
 
-write something
+write something (that makes sense)
 
 \input{chapters/Introduction}
 \input{chapters/Mathematical}
