--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -27,7 +27,6 @@
 \maketitle
 \input{chapters/Introduction}
 \input{chapters/Mathematical}
-\input{chapters/Theoretical Analysis}
 \input{chapters/Results}
 \input{chapters/Simulation}
 \input{chapters/Conclusion}
@@ -35,5 +34,6 @@
 \newpage
 \appendix
 \input{chapters/Appendix}
-
+\bibliographystyle{plain}
+\bibliography{Bibliography/Toxic-News}
 \end{document}
