--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -27,7 +27,7 @@
 \maketitle
 \input{chapters/Introduction}
 \input{chapters/Mathematical}
-\input{chapters/Theoretical Analysis}
+\input{chapters/TheoreticalAnalysis}
 \input{chapters/Simulation}
 \input{chapters/Conclusion}
 
