--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -6,9 +6,13 @@
 \usepackage{algorithmic}
 \usepackage{graphicx}
 \usepackage{textcomp}
+\usepackage{marginnote}
 \usepackage{xcolor}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
+    
+    
+\newcommand{\acomment}[1]{\marginnote{\tiny{\textcolor{red}{A:#1}}}}
 \begin{document}
 
 
