--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -7,6 +7,8 @@
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{marginnote}
+\usepackage[ruled,vlined]{algorithm2e}
+\usepackage[hidelinks]{hyperref}
 \usepackage{xcolor}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
@@ -35,7 +37,7 @@
 \input{chapters/Simulation}
 \input{chapters/Conclusion}
 
-\newpage
+\cleardoublepage
 \appendix
 \input{chapters/Appendix}
 \bibliographystyle{plain}
