abstract + statement of contribution

--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -31,6 +31,13 @@
 }
 
 \maketitle
+
+\begin{abstract}
+Misinformation represents today a danger for several aspects in our world, from democracy, to economic stability and public health. The goal of this work is developing a model to study misinformation spread among a population and investigate which factors influence the dynamics. Our models considers individuals which are different under some personality traits. Convergence, connectivity and stability of the model is first theoretically analyzed. We present four numerical experiments using the model from which we can drive important insights on misinformation spread dynamics: the instruction level reduces the misinformation in the system, the diversity among individuals results in more diversified opinions at steady state, easily influenceable individuals speed up the opinion convergence and a more connected community is less prone to opinion polarization.
+\end{abstract}
+
+
+
 \input{chapters/Introduction}
 \input{chapters/Mathematical}
 \input{chapters/TheoreticalAnalysis}
