ConclAsions and minor fixes

--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -18,7 +18,7 @@
 \begin{document}
 
 
-\title{Conference Paper Title\\}
+\title{Fake and Real News Spread \\}
 
 \author{\IEEEauthorblockN{Alessio Mina}
 \IEEEauthorblockA{\textit{ETH Zurich, MSc Mech Eng}}
