Modifiche a Abstract e Intro

--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,conference]{IEEEtran}
+\documentclass[10pt,conference]{IEEEtran}
 \IEEEoverridecommandlockouts
 % The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.
 \usepackage{cite}
@@ -18,7 +18,7 @@
 \begin{document}
 
 
-\title{Fake and Real News Spread \\}
+\title{Modeling News Spread in a Society with Individual Personality Traits\\}
 
 \author{\IEEEauthorblockN{Alessio Mina}
 \IEEEauthorblockA{\textit{ETH Zurich, MSc Mech Eng}}
@@ -33,7 +33,7 @@
 \maketitle
 
 \begin{abstract}
-Misinformation represents today a danger for several aspects in our world, from democracy, to economic stability and public health. The goal of this work is developing a model to study misinformation spread among a population and investigate which factors influence the dynamics. Our models considers individuals which are different under some personality traits. Convergence, connectivity and stability of the model is first theoretically analyzed. We present four numerical experiments using the model from which we can drive important insights on misinformation spread dynamics: the instruction level reduces the misinformation in the system, the diversity among individuals results in more diversified opinions at steady state, easily influenceable individuals speed up the opinion convergence and a more connected community is less prone to opinion polarization.
+The spread of misinformation is a danger for several aspects in today's world, from democracy, to economic stability and public health. The goal of this work is to develop a model to study how reliable and unreliable news spread among a population and investigate which factors influence the dynamics. Our model considers individuals who are different under some personality traits. Convergence, connectivity and stability of the model are first theoretically analyzed. We present four numerical experiments using our model from which we can derive important insights on opinion spread dynamics: the instruction level reduces the misinformation in the system, the diversity among individuals results in more diversified opinions at steady state, easily influenceable individuals speed up the opinion convergence and, in a bipolar society, a wider connected community is less prone to opinion polarization.
 \end{abstract}
 
 
@@ -45,8 +45,9 @@ Misinformation represents today a danger for several aspects in our world, from 
 \input{chapters/Conclusion}
 
 \cleardoublepage
-\appendix
-\input{chapters/Appendix}
+
 \bibliographystyle{plain}
 \bibliography{Bibliography/Toxic-News}
+\appendix
+\input{chapters/Appendix}
 \end{document}
