--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -1,6 +1,14 @@
 \documentclass[10pt,conference]{IEEEtran}
 \IEEEoverridecommandlockouts
 % The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.
+\usepackage{etoolbox}
+\makeatletter
+\patchcmd{\@makecaption}
+  {\scshape}
+  {}
+  {}
+  {}
+\makeatother
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
@@ -44,10 +52,8 @@ The spread of misinformation is a danger for several aspects in today's world, f
 \input{chapters/Simulation}
 \input{chapters/Conclusion}
 
-\cleardoublepage
-
 \bibliographystyle{plain}
 \bibliography{Bibliography/Toxic-News}
-\appendix
-\input{chapters/Appendix}
+%\appendix
+%\input{chapters/Appendix}
 \end{document}
