adjust report according to reviews

--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -13,6 +13,8 @@
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
 \usepackage{graphicx}
+\usepackage{subfig}
+%\usepackage{showframe}
 \usepackage{textcomp}
 \usepackage{marginnote}
 \usepackage[ruled,vlined]{algorithm2e}
