Link to repo added and minor fix in plot name.

--- a/Report/RepAdv.tex
+++ b/Report/RepAdv.tex
@@ -45,7 +45,8 @@
 \begin{abstract}
 The spread of misinformation is a danger for several aspects in today's world, from democracy, to economic stability and public health. The goal of this work is to develop a model to study how reliable and unreliable news spread among a population and investigate which factors influence the dynamics. Our model considers individuals who are different under some personality traits. Convergence, connectivity and stability of the model are first theoretically analyzed. We then present four numerical experiments using our model from which we can derive important insights on opinion spread dynamics: the instruction level reduces the misinformation in the system, the diversity among individuals results in more diversified opinions at steady state, easily influenceable individuals speed up the opinion convergence and, in a bipolar society, a wider connected community is less prone to opinion polarization.
 \end{abstract}
-
+\vspace{0.2cm}
+Link to \textit{Github} repository: \href{https://github.com/leonzug/ATICProjectNewsSpread.git}{Project link}.
 
 
 \input{chapters/Introduction}
